--- a/html.css
+++ b/html.css
@@ -7,7 +7,7 @@ body {
 
 header {
     background: rgb(29, 175, 29);
-    color: white;
+    color: blue;
     text-align: center;
     padding: 10px;
 }
